--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
     padding: 0;
     text-align: center;
-}
-
-#game-intro{
-    display: none;
     padding: 20px;
-    background-image: url('images/Fake background.jpg');
-    background-size: cover;
-    background-position: center;
+    font-family: "Jura", sans-serif;
 }
 
 #game-instruction{
@@ -20,7 +19,7 @@ body{
 }
 
 #game-container{
-    display: block;
+    display: none;
     padding: 20px;
     background-image: url('images/Chessboard.jpg');
     background-size: cover;
@@ -44,14 +43,70 @@ body{
     padding: 20px;
 }
 
+/* Styling for the Game intro screen */
+
+#game-intro{
+    display: block;
+    background-image: url('../Images2/Intro.webp');
+    width: 99vw;
+    height: 99vh;
+    background-size: cover; /* Ensures it fits the entire screen */
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.title-img{
+    height: 40vw;
+    width: auto;
+    position: absolute;
+    bottom: 35%;
+    left: 50%;
+    transform: translateX(-50%); /* aligned in the middle */
+}
+
+.logo-img {
+    height: 20vw;
+    width: auto;
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-46%); /* aligned in the middle but the image is not super symetrical */
+}
+
+.button{
+    background-color: rgba(20, 20, 80, 0.3);
+    color: ivory;
+    font-family: "Jura", sans-serif;
+    font-size: 1.5rem;
+    padding: 12px 24px;
+    border: ivory;
+    border-radius: 5px;
+    letter-spacing: 3px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 40px auto;
+    width: fit-content;
+    position: absolute;
+    left: 50%; 
+    bottom: 12%; 
+    transform: translateX(-46%);
+}
+
+.button:hover{
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.3);
+}
+
+/*-------------------*/
+
+
 #game-intro p {
     font-size: 18px;
     font-family: "Poppins";
 }
 
-.logo-img {
-    width: 300px;
-}
+
 
 body button{
     font-size: 18px;
@@ -63,12 +118,6 @@ body button{
     border: none;
     border-radius: 5px;
     margin-bottom: 20px;
-}
-
-#game-intro h1 {
-    font-size: 40px;
-    font-family: "Poppins";
-    color: darkblue;
 }
 
 
